--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
     "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.22",
+    "gatsby-source-filesystem": "^4.9.1",
+    "gatsby-transformer-remark": "^5.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
